# HRBFQI

./: .gitattributes  .gitignore  CMakeLists.txt  RBFRecon.pro  README.md
DataStructure/: CMakeLists.txt  OctTree.cpp  PointSet.cpp  PolygonalMesh.cpp
HRBFQI/: FileManager.cpp  FileManager.h  HRBF.cpp  HRBF.h  HRBFQI.cpp  MeshCleaner.cpp
PQP/: CMakeLists.txt
numericalC/: jacobi.h
polygonizer/: CMakeLists.txt  ImplicitFunction.h
pyHRBFQI/: CMakeLists.txt  pyHRBFQI.cpp  test_pyHRBFQI.py
